--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "understanding-ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+  "dependencies": {
+    "@types/node": "^17.0.21",
+    "node": "^16.13.2",
+    "node-typescript": "*",
+    "ts-node": "^10.5.0"
   },
-  "author": "Maximilian Schwarzmüller",
-  "license": "ISC",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "typescript": "^4.5.5"
   }
 }
